Admin channel delete fix #19979 (#2532)
* cleanup of Delete channels section:
Avoid single sentence paras.
Remove superfluous step (see https://github.com/SUSE/spacewalk/issues/19979
and https://github.com/uyuni-project/uyuni-docs/issues/1913).
Remove superfluous sectioning; the "for more info" sentence belongs to the Delete
channels section.
* new title style

--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -1,5 +1,5 @@
 [[channel-management]]
-= Channel Management
+= Channel management
 
 Channels are a method of grouping software packages.
 
@@ -24,30 +24,29 @@ For more on creating custom channels, see xref:administration:custom-channels.ad
 
 
 
-== Channel Administration
+== Channel administration
 
 By default, any user can subscribe channels to a system.
 You can implement restrictions on the channel using the {webui}.
 
 
 
-.Procedure: Restricting Subscriber Access to a Channel
+.Procedure: Restricting subscriber access to a channel
 . In the {productname} {webui}, navigate to menu:Software[Channel List], and select the channel to edit.
 . Locate the [guimenu]``Per-User Subscription Restrictions`` section and check [guimenu]``Only selected users within your organization may subscribe to this channel``.
   Click btn:[Update] to save the changes.
 . Navigate to the [guimenu]``Subscribers`` tab and select or deselect users as required.
 
 
+
 [[delete_channels]]
-== Delete Channels
+== Delete channels
 
 You can delete vendor software channels from the command prompt.
 
-For information about deleting custom channels, see xref:administration:custom-channels.adoc[].
 
 
-
-.Procedure: Deleting Vendor Channels
+.Procedure: Deleting vendor channels
 . On the {productname} Server, at the command prompt, as root, list the available vendor channels, and make a note of the channel you want to delete:
 +
 ----
@@ -58,14 +57,7 @@ mgr-sync list channels
 ----
 spacewalk-remove-channel -c <channel-name>
 ----
-. Synchronize to remove the channel:
-+
-----
-mgr-sync sync channel <channel-name>
-----
-
-
-== Related topics
 
 * For more information about deleting channels manually, see xref:common-workflows:workflow-removing-channel.adoc[].
+* For information about deleting custom channels, see xref:administration:custom-channels.adoc[].
 
