--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -65,7 +65,7 @@ link:https://scc.suse.com/cloudsupport[SUSE Customer Center Cloudsupport]
 
 === billing-data-service
 
-Serves billing data from {productname} for the **CSP-billing-adapter**
+Serves billing data from {productname} for the **CSP-billing-adapter**.
 The service is reachable at: 
 
 - http://localhost:18888/
