--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -100,7 +100,7 @@ It also checks if the **csp-billing-adapter-service** is installed and running.
 If these services are not running or installed it will attempt to install and start the service.
 
 Consequences:: 
-If one of the previous billing services is not running and cannot be installed or started **spacewalk** will refuse to start
+If one of the previous billing services is not running and cannot be installed or started **spacewalk** will refuse to start.
 
 Check `journalctl -u mgr-check-payg.service` for additional issues.
 
