--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -71,7 +71,7 @@ The service is reachable at:
 - http://localhost:18888/
 - http://localhost:18888/metering
 
-This service is maintained by the {productname} team
+This service is maintained by the {productname} team.
 This service only logs to **systemd journal**.
 
 **Billing services** must be running or **spacewalk** will refuse to start.
