--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -54,7 +54,7 @@ Ubuntu and Debian are not currently supported by our RMT servers.
 .Red Hat Linux Enterprise Clients
 {productname} offers support for {rhel} clients; however it is important to note that content still needs to be added manually and is not available through the cloud-based RMT service.
 
-See: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration]
+For more information see: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration].
 ====
 
 
