--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
@@ -62,7 +62,7 @@ This command will create the following storage locations:
 
 Execute `yast2 suusemanager_Setup` as root.
 
-For more information on a typical {productname} installation see: xref:installation-and-upgrade:server-setup.adoc[Server Setup]
+For more information on a typical {productname} installation, see xref:installation-and-upgrade:server-setup.adoc[Server Setup].
 
 
 
