--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-troubleshooting.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-troubleshooting.adoc
@@ -6,5 +6,5 @@
 
 `iam:ListInstanceProfiles` is also required.
 
-. Enter role. MeterUsage or select it from the dropdown
+. Enter role [literal]``MeterUsage`` or select it from the dropdown.
 . Enter a custom name.
