--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
@@ -60,7 +60,7 @@ This command will create the following storage locations:
 
 .Run setup
 
-Execute `yast2 suusemanager_Setup` as root.
+Execute `yast2 susemanager_setup` as root.
 
 For more information on a typical {productname} installation, see xref:installation-and-upgrade:server-setup.adoc[Server Setup].
 
