--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -3,7 +3,7 @@
 
 == Requirements
 
-{productname} must be setup and running on AWS. For more information on finding and setting up {productname}, see: xref:public-cloud-guide/payg/payg-public-cloud-images.adoc[Public Cloud Images]
+{productname} must be setup and running on AWS. For more information on finding and setting up {productname}, see xref:public-cloud-guide:payg/payg-public-cloud-images.adoc[Public Cloud Images].
 
 
 .The instance-flavor-check tool and {payg} schedule check 
