--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -37,7 +37,8 @@ The Products table listed under menu:Admin[Setup Wizard > Products] will be empt
 
 .Procedure: Verify credentials for {payg} and refreshing the product list
 
-. On your fresh server navigate to the menu:Admin[Setup Wizard > Pay-as-you-go] tab to view and manage {payg} credentials. Localhost should provide the description **SUSE Manager Pay-as-you-go** and the **status** should read **Credentials successfully updated**
+. On your new server navigate to the menu:Admin[Setup Wizard > Pay-as-you-go] tab to view and manage {payg} credentials. 
+  Localhost should provide the description ``SUSE Manager Pay-as-you-go`` and the status should read ``Credentials successfully updated``.
 
 . Navigate to the menu:Admin[Products] tab and click btn:[Refresh].
 
