updated requirements table

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
@@ -17,7 +17,7 @@ When setting up a SUSE Manager {payg} instance on AWS, it's essential to conside
 | 80 GB
 
 | CPU
-| 4 cores; Utilize the latest **m6a** or **m6i** systems, or opt for the older generation **m5a** or **m5i** machines
+| 4 cores; Use the **m5a**, **m5i**, **m6a**, **m6i** systems or newer 
 
 | Memory
 | 32 GB (minimum 16 GB)
