updated IAM roles

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -5,7 +5,11 @@ This section covers initial preparation and configuration of the image on {aws}.
 .The IAM role
 [IMPORTANT]
 ====
-To ensure seamless operation, proper AWS permissions for the IAM role are essential. This role must be attached after the instance is launched; attaching it beforehand will result in a disconnection of {productname} after one hour. You can pre-create the role and then select it from the existing btn:[IAM role] dropdown during the instance configuration process.
+To ensure seamless operation, proper AWS permissions for the IAM role are essential. This role must be attached to the instance. Otherwise disconnection errors will be thrown after one hour. 
+
+You can pre-create the role on your {aws} account and then select it from the existing btn:[IAM role] dropdown during the instance configuration process.
+
+If you create the role during the creation of an instance, the role will not be attached automatically. The role should be added post setup.
 
 A role can be assigned to a running instance through the following steps: menu:Actions[Security > Modify IAM-role].
 
