add notes about zypper repository version pinning

--- a/modules/quickstart/pages/install-uyuni-server.adoc
+++ b/modules/quickstart/pages/install-uyuni-server.adoc
@@ -49,6 +49,14 @@ repo=repositories/systemsmanagement:/
 repo=${repo}Uyuni:/Stable/images/repo/Uyuni-Server-POOL-x86_64-Media1/
 zypper ar https://download.opensuse.org/$repo uyuni-server-stable
 ----
+[IMPORTANT]
+====
+Instead of using the latest package versions of {productname}, you can also use an earlier version's repository, e.g.:
+----
+repo=${repo}Uyuni:/Snapshots:/2023.09/images/repo/Uyuni-Server-POOL-x86_64-Media1/
+----
+Please keep in mind that this is *not supported* by the Uyuni team, but might be useful for testing purposes or version pinning.
+====
 . Refresh metadata from the repositories:
 +
 ----
