--- a/modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc
@@ -18,6 +18,16 @@ repo=${repo}Uyuni:/Stable/images/repo/Uyuni-Proxy-POOL-x86_64-Media1/
 zypper ar https://download.opensuse.org/$repo uyuni-proxy-stable
 ----
 +
+[IMPORTANT]
+====
+Instead of using the latest package versions of {productname}, you can also use an earlier version's repository, e.g.:
+
+----
+repo=${repo}Uyuni:/Snapshots:/2023.09/images/repo/Uyuni-Proxy-POOL-x86_64-Media1/
+----
+
+Please keep in mind that this is *not supported* by the Uyuni team, but might be useful for testing purposes or version pinning.
+====
 
 . Refresh metadata from the repositories.
     As [systemitem]``root`` enter:
