--- a/modules/retail/pages/retail-install-uyuni.adoc
+++ b/modules/retail/pages/retail-install-uyuni.adoc
@@ -33,6 +33,16 @@ repo=${repo}Uyuni:/Stable/images/repo/Uyuni-Server-POOL-x86_64-Media1/
 ----
 zypper ar https://download.opensuse.org/$repo uyuni-server-stable
 ----
+[IMPORTANT]
+====
+Instead of using the latest package versions of {productname}, you can also use an earlier version's repository, e.g.:
+
+----
+repo=${repo}Uyuni:/Snapshots:/2023.09/images/repo/Uyuni-Server-POOL-x86_64-Media1/
+----
+
+Please keep in mind that this is *not supported* by the Uyuni team, but might be useful for testing purposes or version pinning.
+====
 . Refresh metadata from the repositories as [systemitem]``root``, and confirm the import of new GPG key into the keyring:
 +
 ----
