--- a/modules/installation-and-upgrade/pages/install-server-unified.adoc
+++ b/modules/installation-and-upgrade/pages/install-server-unified.adoc
@@ -13,8 +13,9 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 ====
 * The recommended way of installing {susemgr} is from the {sle} installation media with the {unifiedinstaller}.
 * In case of installing {susemgr} in a public cloud where {susemgr} image is available, use that image. 
-    For more information, see xref:specialized-guides:qs-publiccloud/overview.adoc[].
-* In case of installing {susemgr} in a public cloud where a {susemgr} image is not available, it is possible to start from a {sles}{nbsp}{sles-version}{nbsp}{sp-base} and switch the base product to {susemgr}{nbsp}{productnumber}.
+    For more information, see xref:specialized-guides:public-cloud-guide/overview.adoc[].
+* In case of installing {susemgr} in a public cloud where a {susemgr} image is not available, it is possible to start from a {sles}{nbsp}{sles-version}{nbsp}{sp-version} and switch the base product to {susemgr}{nbsp}{productnumber}.
+
   For more information, see xref:installation-and-upgrade:install-vm.adoc[].
 ====
 
