--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -8,6 +8,20 @@ endif::[]
 
 
 * xref:specialized-guides-overview.adoc[Specialized Guides]
+** xref:public-cloud-guide/overview.adoc[Public Cloud Guide]
+*** xref:public-cloud-guide/byos/byos-overview.adoc[BYOS Guide]
+**** xref:public-cloud-guide/byos/setup.adoc[Initial Setup]
+**** xref:public-cloud-guide/byos/clients.adoc[Client Configuration]
+*** {payg} Guide
+**** xref:public-cloud-guide/payg/payg-overview.adoc[{payg} Overview]
+**** {payg} on AWS
+***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
+***** xref:public-cloud-guide/payg/payg-public-cloud-images.adoc[1. Public Cloud Images]
+***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[2. Configuration and Startup]
+***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
+***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
+***** xref:public-cloud-guide/payg/payg-connections-and-bootstrapping.adoc[5. Connecting Clients and Client Registration]
+*** xref:public-cloud-guide/payg-support.adoc[Public Cloud Support]
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
@@ -49,14 +63,10 @@ endif::[]
 *** xref:large-deployments/retail-large-scale.adoc[Large Retail Environments]
 *** xref:large-deployments/tuning.adoc[Tuning Large Installations]
 *** xref:large-deployments/monitoring.adoc[Monitoring Large Scale Deployments]
-** xref:qs-publiccloud/overview.adoc[Quick Start: Public Cloud]
-*** xref:qs-publiccloud/setup.adoc[Setting Up]
-*** xref:qs-publiccloud/clients.adoc[Clients]
 ** xref:qs-sap/overview.adoc[Quick Start: SAP]
 *** xref:qs-sap/prepare-server.adoc[Prepare Server]
 *** xref:qs-sap/prepare-clients.adoc[Prepare Clients]
 *** xref:qs-sap/configure.adoc[Configuration]
-
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
