--- a/modules/specialized-guides/pages/public-cloud-guide/byos/clients.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/clients.adoc
@@ -9,7 +9,9 @@ For instructions on connecting {payg} instances, see xref:installation-and-upgra
 
 
 
-== More information
+== Additional Resources
+
+For more information on using {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide].
 
 For more {productname} product documentation, see https://documentation.suse.com/suma.
 
