--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -29,7 +29,7 @@ Find the {minimalsles} image at https://download.suse.com/.
 2+<| KVM Settings
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
-| Version:            | SLES{sles-version}-{sp-version}-{minimal}-VM.x86_64-kvm-and-xen-GM.qcow2
+| Version:            | SLES{sles-version}-{sp-base}-{minimal}-VM.x86_64-kvm-and-xen-GM.qcow2
 | Memory:             | 16 GB
 | CPU's:              | 4
 | Storage Format:     | _.qcow2_ 24 GB (Default) Minimmal Root Partition
