More sp-version changed to sp-base (#2538)
* More sp-version changed to sp-base

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -29,10 +29,10 @@ Find the {minimalsles} image at https://download.suse.com/.
 2+<| KVM Settings
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
-| Version:            | SLES{sles-version}-{sp-version}-{minimal}-VM.x86_64-kvm-and-xen-GM.qcow2
+| Version:            | SLES{sles-version}-{sp-base}-{minimal}-VM.x86_64-kvm-and-xen-GM.qcow2
 | Memory:             | 16 GB
 | CPU's:              | 4
-| Storage Format:     | _.qcow2_ 24 GB (Default) Minimmal Root Partition
+| Storage Format:     | _.qcow2_ 24 GB (Default) Minimal Root Partition
 | Virtual Disks:      |
 | VirtIO Disk 2       | 101 GB for [path]``/var/spacewalk``
 | VirtIO Disk 3       | 50 GB for [path]``/var/lib/pgsql``
