remove trad. client documentation adjust Salt documentation accordingly cosmetic drive-by edits

--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -1,7 +1,7 @@
 [[activation-keys]]
 = Activation Keys
 
-Activation keys are used with traditional and Salt clients to ensure that your clients have the correct software entitlements, are connecting to the appropriate channels, and are subscribed to the relevant groups.
+Activation keys are used to ensure that your clients have the correct software entitlements, are connecting to the appropriate channels, and are subscribed to the relevant groups.
 Each activation key is bound to an organization, which you can set when you create the key.
 
 In {productname}, an activation key is a group of configuration settings with a label.
@@ -31,7 +31,7 @@ image::provision-config-keys.png[scaledwidth=80%]
 . Click the btn:[Create Key] button.
 . On the [guimenu]``Activation Key Details`` page, in the [guimenu]``Description`` field, enter a description of the activation key.
 . In the [guimenu]``Key`` field, enter a name for the activation key.
-    For example, ``SLES15-SP4`` for {sles}{nbsp}15{nbsp}SP4.
+  For example, ``SLES15-{sp-version}`` for {sles}{nbsp}15{nbsp}{sp-version}.
 +
 [IMPORTANT]
 ====
@@ -44,7 +44,7 @@ However, you *must* use commas for Red Hat Products.
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
-    For more information, see xref:reference:admin/setup-wizard.adoc#vle.webui.admin.wizard.products[] and xref:administration:custom-channels.adoc[].
+  For more information, see xref:reference:admin/setup-wizard.adoc#vle.webui.admin.wizard.products[] and xref:administration:custom-channels.adoc[].
 . Select the child channels you need (for example, the mandatory {susemgr} tools and updates channels).
 . Check the [guimenu]``Add-On System Types`` check box if you need to enable any of the options. 
 . We recommend you leave the [guimenu]``Contact Method`` set to [guimenu]``Default``.
@@ -59,7 +59,9 @@ Ensure you go back and check the box if you need to enable configuration managem
 ====
 
 
-
+////
+//  2023-10-23, ke: trad. client only feature
+//  FIXME: salt workaround available?
 == Combining Multiple Activation Keys
 
 You can combine activation keys when executing the bootstrap script on your traditional clients.
@@ -90,6 +92,7 @@ If conflicts are detected, they are handled like this:
 * Conflicts in system types: registration fails.
 * Conflicts in the `enable configuration` flag: configuration management is enabled.
 * If one key is system-specific: registration fails.
+////
 
 
 
@@ -103,7 +106,8 @@ Click btn:[Generate New Key] to create the reactivation key.
 Record the details of the key for later use.
 Unlike typical activation keys, which are not associated with a specific system ID, keys created here do not show up on the menu:Systems[Activation Keys] page.
 
-For Salt clients, after you have created a reactivation key, you can use it as the ``management_key`` grain in [path]``/etc/salt/minion.d/susemanager.conf``. For example:
+After you have created a reactivation key, you can use it as the ``management_key`` grain in [path]``/etc/salt/minion.d/susemanager.conf``.
+For example:
 
 ----
 grains:
@@ -115,17 +119,6 @@ Restart the [command]``salt-minion`` process to apply the reactivation key.
 
 You can use a reactivation key with a bootstrap script.
 For more information about bootstrap scripts, see xref:client-configuration:registration-bootstrap.adoc[].
-
-For traditional clients, after you have created a reactivation key, you can use it with the [command]``rhnreg_ks`` command line utility.
-This command re-registers the client and restore its {productname} settings.
-On traditional clients, you can combine reactivation keys with activation keys to aggregate the settings of multiple keys for a single system profile.
-For example:
-
-----
-rhnreg_ks --server=<server-url>/XMLRPC \
-          --activationkey=<reactivation-key>,<activationkey> \
-          --force
-----
 
 [WARNING]
 ====
