remove trad. client documentation in autoinst*

--- a/modules/client-configuration/pages/autoinst-pxeboot.adoc
+++ b/modules/client-configuration/pages/autoinst-pxeboot.adoc
@@ -18,7 +18,7 @@ During a network boot installation:
 
 . The distribution is installed automatically according to the {kickstart} or {ay} profile.
 
-. The profile calls a code snippet that registers the client to the {productname} Server, either as a traditional or Salt client.
+. The profile calls a code snippet that registers the client to the {productname} Server.
 
 image::cobbler_menu.png[scaledwidth=100%]
 
