remove trad. documentation

--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -1,7 +1,7 @@
 [[client-cfg-tools-repository]]
 = Bootstrap Repository
 
-A bootstrap repository contains required packages for registering Salt or traditional clients during bootstrapping, as well as packages for installing Salt on clients.
+A bootstrap repository contains required packages for registering clients during bootstrapping, as well as packages for installing Salt on clients.
 When products are synchronized, bootstrap repositories are automatically created and regenerated on the {productname} Server.
 
 
@@ -102,7 +102,7 @@ mgr-create-bootstrap-repo -l
 mgr-create-bootstrap-repo -c SLE-version-x86_64
 ----
 +
-. Alternatively, use the number shown next to the distribiution name in the list of available distributions.
+. Alternatively, use the number shown next to the distribution name in the list of available distributions.
 
 
 The client repository is located in [path]``/srv/www/htdocs/pub/repositories/``.
