--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -13,7 +13,7 @@ Registering clients to a proxy is similar to registering them directly to the {p
 
 These sections contain information on registering Salt clients to a proxy using the {webui}, commands on the command line, or a bootstrap script.
 There is also information on registering traditional clients using a bootstrap script.
-There are also procedure how you can move clients from one {productname} Proxy to another one or to the {productname} Server.
+There are also procedures how you can move clients from one {productname} Proxy to another one or to the {productname} Server.
 
 // Here starts what you can see on the server about proxy connected clients
 
@@ -91,4 +91,3 @@ for refreshing the channel URLs is scheduled.
 If you want to move a Salt client from a proxy to the server, select [literal]``None`` from proxy list.
 
 If you want to move a traditional client to the server you must repeat the registration process from the beginning.
-
