remove trad. documentation

--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -2,7 +2,7 @@
 = Registering with a Bootstrap Script (Salt and Traditional)
 
 
-You can register Salt or traditional clients through the {productname} Proxy with a bootstrap script.
+You can register clients through the {productname} Proxy with a bootstrap script.
 This is done almost the same way as registering clients directly with the {productname} Server.
 The difference is that you create the bootstrap script on the {productname} Proxy with a command line tool.
 The bootstrap script then deploys all necessary information to the clients.
@@ -17,7 +17,6 @@ These parameters depend on your specific setup.
     For more information, see xref:client-configuration:activation-keys.adoc[].
 . On the proxy, execute the [command]``mgr-bootstrap`` command line tool as {rootuser}.
     If needed, use the additional command line switches to tune your bootstrap script.
-    To install a traditional client instead of a Salt client, ensure you use the [command]``--traditional`` switch.
 +
 To view available options type [command]``mgr-bootstrap --help`` from the command line:
 +
