--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -23,9 +23,9 @@ You can subscribe clients to configuration channels, and deploy configuration fi
 Configuration files are version-controlled, so you can add configuration settings, test them on your clients, and roll back to a previous revision as required.
 When you have created your configuration channels, you can also perform comparisons between various configuration files, and between revisions of the same configuration file.
 
-Configuration files can be centrally managed, or locally managed.
+Configuration files can be centrally managed.
 Centrally managed configuration files are provided by global configuration channels.
-Locally managed configuration files are created or uploaded to {productname} directly.
+// Locally managed configuration files are created or uploaded to {productname} directly.
 
 The available configuration management features are different for Salt and traditional clients.
 This table shows the supported features on different client types:
@@ -76,27 +76,6 @@ This table shows the supported features on different client types:
 | {check}
 
 |===
-
-
-
-// Edited these for style, not tested. --LKB 2020-07-31
-== Prepare Traditional Clients for Configuration Management
-
-Traditional clients require some extra preparation to use configuration management.
-If you installed your traditional client with {ay} or {kickstart} you probably already have the appropriate packages.
-For other traditional clients, ensure you have installed the relevant tools child channel for your client operating system.
-For more information about software channels, see xref:client-configuration:channels.adoc[].
-
-The packages you require are:
-
-* [path]``mgr-cfg``: base libraries and functions needed by all [path]``mgr-cfg-*`` packages
-* [path]``mgr-cfg-actions``: required to run configuration actions scheduled using {productname}.
-* [path]``mgr-cfg-client``: provides a command line interface to the client features of the configuration management system.
-* [path]``mgr-cfg-management``: provides a command line interface to manage {productname} configuration.
-
-You can install these packages during the bootstrap process by navigating to menu:Systems[Activation Keys], clicking the activation key you intend to use during bootstrap, and checking the [guimenu]``Configuration File Deployment`` option.
-For more information about activation keys, see
-xref:client-configuration:activation-keys.adoc[].
 
 
 
