--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -28,7 +28,13 @@ Centrally managed configuration files are provided by global configuration chann
 Locally managed configuration files are created or uploaded to {productname} directly.
 
 The available configuration management features are different for Salt and traditional clients.
-This table shows the supported features on different client types:
+This table shows the supported features on different client types.
+
+The icons in this table indicate:
+
+* {check} features are supported by {suse}
+* {cross} features are not supported by {suse}
+* {question} features are under consideration, and may or may not be supported at a later date.
 
 
 .Configuration Management Supported Features
