changes per feedback

--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -1,7 +1,7 @@
 [[client-cfg-tools-repository]]
 = Bootstrap Repository
 
-A bootstrap repository contains required packages for registering clients during bootstrapping, as well as packages for installing Salt on clients.
+A bootstrap repository contains required packages for registering clients during bootstrapping.
 When products are synchronized, bootstrap repositories are automatically created and regenerated on the {productname} Server.
 
 
