update salt/trad. feature table

--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -52,7 +52,7 @@ This table shows the supported features on different client types:
 | {check}
 
 | Locally Managed Files
-| {cross}
+| {check} (with {salt} features)
 | {check}
 
 | Sandbox Files
@@ -72,7 +72,7 @@ This table shows the supported features on different client types:
 | {cross}
 
 | Configuration Macros
-| {cross}
+| {check} with {salt} features (grains, pillar data, etc.)
 | {check}
 
 |===
