--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -10,7 +10,8 @@ Configuration files can be centrally managed.
 Centrally managed configuration files are provided by global configuration channels and can be applied to any client subscribed to the {productname} Server.
 
 ////
-// 2023-10, julio:
+// 2023-10, julio: such features are somehow covered by salt. Is dedicated documentation
+// for this required?
 Locally managed configuration files are used to override centrally managed configuration settings.
 They are especially useful for {productname} users who do not have configuration administration privileges, but need to make changes to the clients that they manage.
 ////
