--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -3,19 +3,18 @@
 
 You can use configuration files and channels to manage configuration for your clients, rather than configuring each client manually.
 
-[NOTE]
-====
-Some of the following features are available for traditional clients only.
-For features supported on {salt} clients, see the table below.
-====
-
 Configuration parameters are scripted and stored in configuration files.
 You can write configuration files directly using the {productname} {webui}, or you can upload or link to files that exist in other locations.
 
-Configuration files can be centrally managed, or locally managed.
+Configuration files can be centrally managed.
 Centrally managed configuration files are provided by global configuration channels and can be applied to any client subscribed to the {productname} Server.
+
+////
+// 2023-10, julio: such features are somehow covered by salt. Is dedicated documentation
+// for this required?
 Locally managed configuration files are used to override centrally managed configuration settings.
 They are especially useful for {productname} users who do not have configuration administration privileges, but need to make changes to the clients that they manage.
+////
 
 Configuration channels are used to organize configuration files.
 You can subscribe clients to configuration channels, and deploy configuration files as required.
@@ -23,9 +22,7 @@ You can subscribe clients to configuration channels, and deploy configuration fi
 Configuration files are version-controlled, so you can add configuration settings, test them on your clients, and roll back to a previous revision as required.
 When you have created your configuration channels, you can also perform comparisons between various configuration files, and between revisions of the same configuration file.
 
-Configuration files can be centrally managed, or locally managed.
 Centrally managed configuration files are provided by global configuration channels.
-Locally managed configuration files are created or uploaded to {productname} directly.
 
 The available configuration management features are different for Salt and traditional clients.
 This table shows the supported features on different client types.
@@ -58,7 +55,7 @@ The icons in this table indicate:
 | {check}
 
 | Locally Managed Files
-| {cross}
+| {check} (with {salt} features)
 | {check}
 
 | Sandbox Files
@@ -78,35 +75,16 @@ The icons in this table indicate:
 | {cross}
 
 | Configuration Macros
-| {cross}
+| {check} with {salt} features (grains, pillar data, etc.)
 | {check}
 
 |===
 
 
 
-// Edited these for style, not tested. --LKB 2020-07-31
-== Prepare Traditional Clients for Configuration Management
-
-Traditional clients require some extra preparation to use configuration management.
-If you installed your traditional client with {ay} or {kickstart} you probably already have the appropriate packages.
-For other traditional clients, ensure you have installed the relevant tools child channel for your client operating system.
-For more information about software channels, see xref:client-configuration:channels.adoc[].
-
-The packages you require are:
-
-* [path]``mgr-cfg``: base libraries and functions needed by all [path]``mgr-cfg-*`` packages
-* [path]``mgr-cfg-actions``: required to run configuration actions scheduled using {productname}.
-* [path]``mgr-cfg-client``: provides a command line interface to the client features of the configuration management system.
-* [path]``mgr-cfg-management``: provides a command line interface to manage {productname} configuration.
-
-You can install these packages during the bootstrap process by navigating to menu:Systems[Activation Keys], clicking the activation key you intend to use during bootstrap, and checking the [guimenu]``Configuration File Deployment`` option.
-For more information about activation keys, see
-xref:client-configuration:activation-keys.adoc[].
-
-
-
 == Create Configuration Channels
+
+=== Central Configuration Channel
 
 To create a new central configuration channel:
 
@@ -119,7 +97,10 @@ To create a new central configuration channel:
 . Click btn:[Create Config Channel] to create the new channel.
 
 
-You can also use a configuration channel to manage Salt states on Salt clients.
+
+=== Salt State Channel
+
+You can also use a configuration channel to manage Salt states on Salt clients:
 
 
 
@@ -219,12 +200,8 @@ dns_conf:
 ----
 
 
-
-== Configuration file macros on traditional clients
-
-Being able to store one file and share identical configurations is useful, but in some cases you might need many variations of the same configuration file, or configuration files that differ only in system-specific details, such as host name and MAC address.
-In this case, you can use macros or variables within the configuration files.
-This allows you to upload and distribute a single file, with hundreds or even thousands of variations.
+////
+// FIXME: how to use these vars with Salt?
 In addition to variables for custom system information, the following standard macros are supported:
 
 ----
@@ -240,51 +217,4 @@ rhn.system.net_interface.broadcast(eth_device)
 rhn.system.net_interface.hardware_address(eth_device)
 rhn.system.net_interface.driver_module(eth_device)
 ----
-
-To use this feature, either upload or create a configuration file via the [guimenu]``Configuration Channel Details`` page.
-Then open its [guimenu]``Configuration File Details`` page and include the supported macros of your choice.
-Ensure that the delimiters used to offset your variables match those set in the [guimenu]``Macro Start Delimiter`` and [guimenu]``Macro End Delimiter`` fields and do not conflict with other characters in the file.
-We recommend that the delimiters be two characters in length and do not contain the percent (``%``) symbol.
-
-For example, you may have a file applicable to all of your servers that differs only in IP address and host name.
-Rather than manage a separate configuration file for each server, you can create a single file, such as [path]``server.conf``, with the IP address and host name macros included.
-
-----
-hostname={| rhn.system.hostname |}
-ip_address={| rhn.system.net_interface.ip_address(eth0) |}
-----
-
-When the file is delivered to individual systems, whether through a scheduled action in the {productname} {webui} or at the command line with the {productname} Configuration Client ([command]``mgrcfg-client``), the variables will be replaced with the host name and IP address of the system as recorded in {productname}'s system profile.
-In this example, the deployed version will look similar to this:
-
-----
-hostname=test.example.domain.com
-ip_address=177.18.54.7
-----
-
-To capture custom system information, insert the key label into the custom information macro (``rhn.system.custom_info``).
-For example, if you developed a key labeled "asset" you can add it to the custom information macro in a configuration file to have the value substituted on any system containing it.
-The macro would look like this:
-
-----
-asset={@ rhn.system.custom_info(asset) @}
-----
-
-When the file is deployed to a system containing a value for that key, the macro gets translated, resulting in a string similar to this:
-
-----
-asset=Example#456
-----
-
-To include a default value (for example, if one is required to prevent errors), you can append it to the custom information macro, like this:
-
-----
-asset={@ rhn.system.custom_info(asset) = 'Asset #' @}
-----
-
-This default is overridden by the value on any system containing it.
-
-The {productname} Configuration Manager ([command]``mgrcfg-manager``) is available on {productname} client machines to assist with system management.
-It will not translate or alter files, as the tool is system agnostic.
-The [command]``mgrcfg-manager`` command does not depend on system settings.
-Binary files cannot be interpolated.
+////
