fix parameter name

--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -47,7 +47,7 @@ On the {productname} Server, as root at the command line execute it with the man
 Replace [systemitem]``<ACTIVATION_KEYS`` and [systemitem]``<EDITED_NAME>`` with your values:
 
 ----
-mgr-bootstrap --activation-key=<ACTIVATION_KEYS> --script=bootstrap-<EDITED NAME>.sh
+mgr-bootstrap --activation-keys=<ACTIVATION_KEYS> --script=bootstrap-<EDITED_NAME>.sh
 ----
 
 The [command]``mgr-bootstrap`` command offers several other options, including the ability to set a specific hostname, set specific GPG keys, and set the registration method (traditional, salt-minion, or salt-bundle).
