remove trad. client documentation (cont.)

--- a/modules/client-configuration/pages/registration-methods.adoc
+++ b/modules/client-configuration/pages/registration-methods.adoc
@@ -3,11 +3,11 @@
 
 There are several ways to register clients to your {productname} Server.
 
-* For Salt clients, we recommend that you register clients using the {productname} {webui}.
+* For only a few clients, we recommend that you register clients using the {productname} {webui}.
     For more information, see xref:client-configuration:registration-webui.adoc[].
-* If you want more control over the process, have to register many clients, or are registering traditional clients, we recommend that you create a bootstrap script.
+* If you want more control over the process, or have to register many clients, we recommend that you create a bootstrap script.
     For more information, see xref:client-configuration:registration-bootstrap.adoc[].
-* For Salt clients and even more control over the process, executing single commands on the command line can be useful.
+* For even more control over the process, executing a single commands on the command line can be useful.
     For more information, see xref:client-configuration:registration-cli.adoc[].
 
 The client must have the date and time synchronized correctly with the {productname} Server before registration.
