--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -1,9 +1,7 @@
 [[registering.clients.webui]]
 = Register Clients with the {webui}
 
-Registering clients with the {productname} {webui} works for Salt clients only.
-
-If you are bootstrapping Salt clients using the {webui}, it is using xref:specialized-guides:salt/salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
+Bootstrapping clients with the {webui} is using xref:specialized-guides:salt/salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
 Salt SSH uses the Salt Bundle and its included Python interpreter. Therefore, no other Python interpreter needs to be installed on the client.
 
 [IMPORTANT]
