--- a/modules/client-configuration/pages/clients-alibaba.adoc
+++ b/modules/client-configuration/pages/clients-alibaba.adoc
@@ -1,7 +1,7 @@
 [[clients-alibaba]]
 = Registering {alibabaclo} Clients
 
-This section contains information about registering traditional and Salt clients running {alibabaclo} operating systems.
+This section contains information about registering clients running {alibabaclo} operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
@@ -12,9 +12,6 @@ ifeval::[{suma-content} == true]
 * For supported products, see the support table and the release notes
 ====
 endif::[]
-
-The traditional stack is available on {alibabaclo}{nbsp}2 but it is not supported.
-{alibabaclo}{nbsp}2 clients are only supported as Salt clients.
 
 [WARNING]
 ====
@@ -120,11 +117,8 @@ For more information on activation keys, see xref:client-configuration:activatio
 include::snippets/create_bootstrap_repo_register.adoc[]
 
 Some {alibabaclo}{nbsp}2 instances will fail to register on the first try.
-
 This is due to a to a known bug in the {alibabaclo}{nbsp}2 image.
 
-The `python-urlgrabber3` package is provided both as a Python pip package and 
-an RPM package, which can cause a conflict on the first attempt to register. 
+The `python-urlgrabber3` package is provided both as a Python pip package and an RPM package, which can cause a conflict on the first attempt to register.
 
-If your instance is based on one of the affected image versions, the client 
-should register correctly on the second registration attempt.
+If your instance is based on one of the affected image versions, the client should register correctly on the second registration attempt.
