Removed trad. client docs: From "a" to "o"

--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -1,7 +1,7 @@
 [[clients-almalinux]]
 = Registering {almalinux} Clients
 
-This section contains information about registering Salt clients running {almalinux} operating systems.
+This section contains information about registering clients running {almalinux} operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
@@ -13,8 +13,7 @@ ifeval::[{suma-content} == true]
 ====
 endif::[]
 
-Traditional clients are not available on {almalinux}.
-{almalinux} clients are only supported as Salt clients.
+
 
 [WARNING]
 ====
@@ -151,7 +150,7 @@ For more information on activation keys, see xref:client-configuration:activatio
 
 == Manage GPG Keys
 
-Clients use GPG keys to check the authenticity of software packages before they are installed. 
+Clients use GPG keys to check the authenticity of software packages before they are installed.
 Only trusted software can be installed on clients.
 
 [IMPORTANT]
