--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -1,7 +1,7 @@
 [[clients-amazon]]
 = Registering {amazon} Clients
 
-This section contains information about registering traditional and Salt clients running {amazon} operating systems.
+This section contains information about registeringclients running {amazon} operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
@@ -13,8 +13,7 @@ ifeval::[{suma-content} == true]
 ====
 endif::[]
 
-Traditional clients are not available on {amazon}{nbsp}2.
-{amazon}{nbsp}2 clients are only supported as Salt clients.
+
 
 [WARNING]
 ====
