--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -1,7 +1,7 @@
 [[clients-centos]]
 = Registering {centos} Clients
 
-This section contains information about registering Salt clients running {centos} operating systems.
+This section contains information about registering clients running {centos} operating systems.
 
 ifeval::[{suma-content} == true]
 // Use list format: repository URLs / packages and metadata / version info
@@ -18,7 +18,6 @@ endif::[]
 ====
 
 ifeval::[{suma-content} == true]
-// SUSE Liberty Linux not available at Uyuni for now
 {centos} clients are based on {centos} and are unrelated to {sleses}, RES, {redhat}, or {es}.
 endif::[]
 
