--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -1,10 +1,7 @@
 [[clients-debian]]
 = Registering {debian} Clients
 
-This section contains information about registering Salt clients running {debian} operating systems.
-
-{debian} is supported for Salt clients only.
-Traditional clients are not supported.
+This section contains information about registering clients running {debian} operating systems.
 
 Bootstrapping can be used with {debian} clients for performing initial state runs, and for profile updates.
 
