--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -1,9 +1,8 @@
 [[clients-opensuseleap]]
 = Registering {opensuse} Leap Clients
 
-This section contains information about registering {salt} clients running {opensuse} operating systems.
+This section contains information about registering clients running {opensuse} operating systems.
 {productname} supports {opensuse} Leap 15 clients using {salt}.
-Traditional clients are not supported.
 
 Bootstrapping is supported for starting {opensuse} clients and performing initial state runs such as setting repositories and performing profile updates.
 
