--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -27,7 +27,7 @@ For more information about the system set manager, see xref:client-configuration
 
 [IMPORTANT]
 ====
-Cleaning up a Salt client does only disable salt and stop the service if possible.
+Cleaning up a {salt} client only disables {salt} and stops the service if possible.
 It does not uninstall the package.
 ====
 
