try to work around parser issue

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -511,11 +511,11 @@ By default, the image store is located at [path]``/srv/www/os-images``.
 Image stores for Kiwi build type, used to build system, virtual, and other images, are not supported yet.
 
 ifeval::[{suma-content} == true]
-Images are always stored in [path]``/srv/www/os-images/<organization-id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization-id>``.
+Images are always stored in [path]``/srv/www/os-images/<organization_id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization_id>``.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-Images are always stored in [path]``/srv/www/os-images/<organization-id>`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/<organization-id>``.
+Images are always stored in [path]``/srv/www/os-images/<organization_id>`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/<organization_id>``.
 endif::[]
 
 ====
